test/resources/parser/passing/ExtType1.scala
object Type1 {
  def f(a: (String, Int) => Int): Int = {
    a("abc", 0)
  }
  0
}
