test/resources/parser/failing/ExtTupleError1.scala
object TupleError {
  val a: (Int, Int) = (1,, 2);
  a(0)
}
